--- a/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/newsletter.html
@@ -1,5 +1,5 @@
 {% extends "marketing_site/base.html" %}
-{% load i18n generic_fields friendly_data_formatting versioned_static %}
+{% load i18n generic_fields friendly_data_formatting %}
 {% block title %}News from around the nonprofit world with The GoodCloud Times!{% endblock %}
 {% block description %}Our monthly newsletter keeps you up-to-date on the latest news in the nonprofit sector - and throws in a great recipe to boot!{% endblock %}
 {% block page_header %}Real people, real voices.{% endblock %}
@@ -15,7 +15,7 @@
 	<div class="tab_content newsletter" >
 			<div class="page_top_hook">All the latest news, and a couple great recipes.</div>
 
-			<span class="the_good_times">The Good Times</span> is our monthly newsletter with all the latest news in the nonprofit community, features in GoodCloud, and often, an amazing recipe. Sign up to recieve it below!
+			<span class="the_good_times">The Good Times</span> is our periodic newsletter with all the latest news in the nonprofit community, features in GoodCloud, and often, an amazing recipe. Sign up to recieve it below!
 			
 
 			<div class="feature">
@@ -41,19 +41,6 @@
 				<p>In the meantime, you can check out the back issues below, or check out <a href="{% url blog %}">our blog</a>.</p>
 				{% endif %}
 				</div>
-			</div>
-
-			<div class="feature">
-				<div class="title">Read back issues of <span class="the_good_times">The Good Times</span></div>
-			
-				<a href="{% url marketing_site:newsletter_issue 2011 7 %}" class="issue issue_2011_07">
-					<div class="cover_image"><img src="{% versioned_static  "images/newsletters/2011-08/burger-crop.jpg"%}" /></div> 
-					<div class="title_and_date">
-						<span class="date">July 2011</span>
-					</div>
-					<div class="overview">This month, <span class="the_good_times">The Good Times</span> looks at how to keep institutional knowledge in the face of staff turnover, the latest trends in social media and how they affect non-profits, and a great recipe for burgers (veggie or otherwise)!</div>
-				</a>
-
 			</div>
 
 	</div>	
