--- a/mycelium/apps/marketing_site/templates/marketing_site/praise.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/praise.html
@@ -1,10 +1,10 @@
 {% extends "marketing_site/base.html" %}
-{% load i18n generic_fields friendly_data_formatting versioned_static %}
+{% load i18n generic_fields friendly_data_formatting  %}
 {% block title %}Testimonials and Reviews: Staff and volunteers love using GoodCloud!{% endblock %}
 {% block description %}GoodCloud users rave about how easy it is to use, and how it's helping their organizations run more efficently. See what they had to say!{% endblock %}
 {% block extra_body %}class="praise"{% endblock %}
 
-{% block page_header %}Love for the <img class="the_cloud" src="{% versioned_static  "images/goodcloud-logo-60-with-shadow.png" %}" />{% endblock %}
+{% block page_header %}Love for the <div class="the_cloud"></div>{% endblock %}
 
 {% block page_content %}
 <div class="testimonial png_bg style_3">
