--- a/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
@@ -1,5 +1,5 @@
 {% extends "marketing_site/base.html" %}
-{% load i18n generic_fields friendly_data_formatting versioned_static %}
+{% load i18n generic_fields friendly_data_formatting staticfiles %}
 {% block title %}Screenshots - see what easy to use for nonprofits looks like.{% endblock %}
 {% block description %}Watch a video interview with GoodCloud's CEO, and see how it helps nonprofits organize and run more easily!{% endblock %}
 
@@ -48,87 +48,87 @@ $(function(){
 			<li>
 			<h4>Quick-search from anywhere in GoodCloud</h4>
 			<div class="tn3 description">The search bar looks in your people, organizations, groups, and spreadsheets. And it's fast - updating instantaneously as you type!</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/global_search.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/global_search.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Viewing a person</h4>
 			<div class="tn3 description">No rows and columns here. We've laid out the screens to look like the things you'd expect - addresses actually look like addresses.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/person_view.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/person_view.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Edit an address</h4>
 			<div class="tn3 description">We've tried to make everything as simple as possible.  Simply make your changes - GoodCloud saves them automatically in the background.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/person_edit.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/person_edit.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Adding volunteer hours</h4>
 			<div class="tn3 description">Adding hours for volunteers couldn't get much simpler.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/add_volunteer_hours.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/add_volunteer_hours.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Remember each conversation</h4>
 			<div class="tn3 description">Now you can remember what what was said, with who, when. Conversations makes it simple to keep a history of interactions for your nonprofit.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/conversations_full.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/conversations_full.jpg" %}"></a>
 			</li>			
 			<li>
 			<h4>Easy to add conversations</h4>
 			<div class="tn3 description">We designed conversations to be fast and easy - so you could type them in <i>while</i> you're on the phone, or just copy and paste an email.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/conversations_adding.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/conversations_adding.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Adding a donation</h4>
 			<div class="tn3 description">Simple and easy to add donations.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/add_donation.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/add_donation.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Built-in calendars</h4>
 			<div class="tn3 description">No more glancing for the calendar - it's built into all of the dates in GoodCloud.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/add_volunteer_hours_with_calendar.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/add_volunteer_hours_with_calendar.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Tags for a person</h4>
 			<div class="tn3 description">One-click to categorize your people in GoodCloud, using the tags that make sense for your nonprofit.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/person_tags.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/person_tags.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Manage Tags</h4>
 			<div class="tn3 description">Tags have been built to be fast, easy, and flexible - to match your organization's needs.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/manage_tags_view.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/manage_tags_view.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Groups list</h4>
 			<div class="tn3 description">Your groups are saved and continually updated - ready when you need them.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/groups_search.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/groups_search.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Viewing a group</h4>
 			<div class="tn3 description">Groups keep themselves up-to-date, automatically.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/group_view.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/group_view.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Editing a group</h4>
 			<div class="tn3 description">It's easy to make groups of people from any criteria in GoodCloud</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/group_edit.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/group_edit.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>View and download a spreadsheet</h4>
 			<div class="tn3 description">Downloading the latest mailing list is one click. Simple.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/spreadsheet_view.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/spreadsheet_view.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Editing a spreadsheet</h4>
 			<div class="tn3 description">We've built-in the most commmon templates for spreadsheets - setting up a spreadsheet is a few quick clicks.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/spreadsheet_edit.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/spreadsheet_edit.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Email lists made easy</h4>
 			<div class="tn3 description">For the email template, we included a quick-copy box, so you can just copy and paste into your mailing list software, email program, or anything else!</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/spreadsheet_email.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/spreadsheet_email.jpg" %}"></a>
 			</li>
 			<li>
 			<h4>Accounts</h4>
 			<div class="tn3 description">Add an unlimited number of staff and volunteer accounts.</div>
-			<a href="{% versioned_static  "images/screenshots/optimized2/accounts.jpg" %}"></a>
+			<a href="{% static  "images/screenshots/optimized2/accounts.jpg" %}"></a>
 			</li>
 		</ul>
 
