--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -1,5 +1,5 @@
 {% extends "marketing_site/base.html" %}
-{% load i18n generic_fields friendly_data_formatting versioned_static %}
+{% load i18n generic_fields friendly_data_formatting  %}
 {% block title %}Tour - watch GoodCloud in action, and hear what motivates our team!{% endblock %}
 {% block description %}Watch a video interview with GoodCloud's CEO, and see how it helps nonprofits organize and run more easily!{% endblock %}
 {% block page_header %}Watch it in action.{% endblock %}
@@ -18,7 +18,7 @@
 			<div class="tour_video">
 			<iframe class="video_box" src="http://player.vimeo.com/video/23807297?title=0&amp;byline=0&amp;portrait=0" width="640" height="360" frameborder="0"></iframe>
 			{# <iframe class="video_box" width="640" height="390" src="https://www.youtube.com/embed/PvTsZfx2zZs?rel=0" frameborder="0" allowfullscreen></iframe> #}
-			{# <img src="{% versioned_static  "images/video-coming-soon.png" %}"/> #}
+			{# <img src="{% static  "images/video-coming-soon.png" %}"/> #}
 			</div>
 			<p><b>Update:</b> GoodCloud has brand-new look since we recorded this video - check out the screenshots to see it! </p>
 
