--- a/mycelium/apps/mycelium_core/static/css/import.css
+++ b/mycelium/apps/mycelium_core/static/css/import.css
@@ -195,3 +195,9 @@ table.import_fields_confirmation .and_more_row td {
 .more_rows_info {
 	padding: 5px;
 }
+.small_spinner {
+	display: inline-block;
+	background: url("../images/spinner-grey-16.gif");
+	width: 16px;
+	height: 16px;
+}
