--- a/mycelium/templates/500.html
+++ b/mycelium/templates/500.html
@@ -1,4 +1,4 @@
-{% load i18n versioned_static %}<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
+{% load i18n  %}<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01//EN"
    "http://www.w3.org/TR/html4/strict.dtd">
 <html lang="en">
 <head>
