changed back to .com

--- a/mycelium/apps/marketing_site/templates/marketing_site/contact_us.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/contact_us.html
@@ -13,7 +13,7 @@
 <div class="row">
 	<a class="fourcol contact_button email" href="mailto:support@agoodcloud.com">
 		<div class="type png_bg">Email</div>
-		<div class="details identical_height_block">Send an email to support@agoodcloud.org</div>
+		<div class="details identical_height_block">Send an email to support@agoodcloud.com</div>
 	</a>
 	<a class="fourcol contact_button online" href="#">
 		<div class="type png_bg">Online</div>
