--- a/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
@@ -85,8 +85,22 @@ $(function(){
 </div>
 </form>
 
+<div class="past_spreadsheets" >
+	<div class="detail_header">Past Spreadsheets</div>
+	<table class="spreadsheet_list striped">
+		{% for s in spreadsheet.past_downloads %}
+			<tr>
+				<td>{{s.date|date}}</td>
+				<td><a href="{{s.permalink}}">{{s.name}}</a></td>
+				<td>{{s.num_records}} rows</td>
+			</tr>
+		{% endfor %}
+	</table>
+
+</div>
+
 <div class="download_spreadsheet_button_block">
-	<a href="{% url spreadsheets:download %}" base_url="{% url spreadsheets:download %}" class="mycelium_btn download_spreadsheet_btn auto_disable" disabled_text="Downloading...">Download Spreadsheet</a>
+	<a href="{% url spreadsheets:generate %}" base_url="{% url spreadsheets:generate %}" class="mycelium_btn download_spreadsheet_btn auto_disable" disabled_text="Downloading...">Generate Spreadsheet</a>
 </div>
 
 
