--- a/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/spreadsheet.html
@@ -90,7 +90,7 @@ $(function(){
 	<table class="spreadsheet_list striped">
 		{% for s in spreadsheet.past_downloads %}
 			<tr>
-				<td>{{s.date|date}}</td>
+				<td>{{s.date|date}} {{s.date|time}}</td>
 				<td><a href="{{s.permalink}}">{{s.name}}</a></td>
 				<td>{{s.num_records}} rows</td>
 			</tr>
@@ -100,7 +100,7 @@ $(function(){
 </div>
 
 <div class="download_spreadsheet_button_block">
-	<a href="{% url spreadsheets:generate %}" base_url="{% url spreadsheets:generate %}" class="mycelium_btn download_spreadsheet_btn auto_disable" disabled_text="Downloading...">Generate Spreadsheet</a>
+	<a href="{% url spreadsheets:queue_generation %}" base_url="{% url spreadsheets:queue_generation %}" class="mycelium_btn download_spreadsheet_btn auto_disable" disabled_text="Downloading...">Generate Spreadsheet</a>
 </div>
 
 
