pulled download button from results

--- a/mycelium/apps/spreadsheets/templates/spreadsheets/_search_result_row_spreadsheet.html
+++ b/mycelium/apps/spreadsheets/templates/spreadsheets/_search_result_row_spreadsheet.html
@@ -5,5 +5,7 @@
 	</td>
 	<td class="count	"	>{{obj.num_people}} people</td>
 {# 	<td class="count	"	>{{obj.num_rows}} rows</td> #}
-	<td class="download "	><a href="{{obj.permalink}}" class="mycelium_btn mycelium_small_btn quick_download_btn">Download File</a></td>
+	<td class="download "	>
+		{# <a href="{{obj.permalink}}" class="mycelium_btn mycelium_small_btn quick_download_btn">Download File</a> #}
+	</td>
 </tr>
