--- a/mycelium/apps/generic_tags/templates/generic_tags/manage.html
+++ b/mycelium/apps/generic_tags/templates/generic_tags/manage.html
@@ -19,7 +19,7 @@ manageTags.state.tag_sets.push(manageTags.objects.tagSet("{{ts.name}}", {{ts.ord
 {% for t in ts.tag_set.all %}{% with forloop.counter as tag_counter %}manageTags.state.tag_sets[{{ts_counter|add:-1}}].tags.push(manageTags.objects.tag(manageTags.state.tag_sets[{{ts_counter|add:-1}}], "{{t.name}}", {{t.order}}, {{t.num_members}}, {{t.pk}}));
 {% endwith %}{% endfor %}{% endwith %}{% endfor %}
 // {{request.is_secure}}
-manageTags.encyclopedia.urls.save_tags_and_tagsets = "{% if ENV == "LIVE" %}https://{% else %}http://{% endif %}{{request.get_host}}{% url generic_tags:save_tags_and_tagsets %}";
+manageTags.encyclopedia.urls.save_tags_and_tagsets = "{% url generic_tags:save_tags_and_tagsets %}";
 
 manageTags.init();
 });
