--- a/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
@@ -35,7 +35,7 @@
 		<a href="{% url marketing_site:contact_us %}">Send an Email</a>
 		<a href="http://www.facebook.com/AGoodCloud" target="_blank">Facebook</a>
 		<a href="http://www.twitter.com/agoodcloud" target="_blank">Twitter</a>
-		<a href="{% url blog %}">Blog</a>
+		{# <a href="{% url blog %}">Blog</a> #}
 	</td>
 
 </tr>
