--- a/mycelium/apps/mycelium_core/static/css/signup.css
+++ b/mycelium/apps/mycelium_core/static/css/signup.css
@@ -177,3 +177,11 @@
 	padding-top: 2px;
 	width: auto;
 }
+.signup_page.all_good_things {
+	font-size: 18px;
+	text-align: left;
+	padding: 20px;
+}
+.signup_page.all_good_things p {
+	margin: 0 0 20px 0;
+}
