--- a/mycelium/apps/accounts/templates/accounts/signup.html
+++ b/mycelium/apps/accounts/templates/accounts/signup.html
@@ -1,7 +1,10 @@
 {% extends "marketing_site/base.html" %}
 {% load i18n generic_fields friendly_data_formatting  %}
-{% block title %}Sign up for a free account at GoodCloud{% endblock %}
-{% block description %}See for yourself the best way to run a small nonprofit. Sign up for a free account right here!{% endblock %}
+{# {% block title %}Sign up for a free account at GoodCloud{% endblock %} #}
+{# {% block description %}See for yourself the best way to run a small nonprofit. Sign up for a free account right here!{% endblock %} #}
+
+{% block title %}GoodCloud: All good things...{% endblock %}
+{% block description %}After three years, we're closing our doors.{% endblock %}
 
 {% block page_header %}All good things..{% endblock %}
 
